--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,6 @@
 
   <name>mvn1</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.coolexample.com</url>
 
 </project>
